--- a/Multilingual/pubspec.yaml
+++ b/Multilingual/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  intl: ^0.17.0
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -59,7 +61,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+     - lib/l10n/strings_en.arb
+     - lib/l10n/strings_ko.arb
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
