--- a/justAudioPlayerIos/pubspec.yaml
+++ b/justAudioPlayerIos/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   just_audio: ^0.9.46
   rxdart: ^0.27.3
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
